2013-06-11  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c:
	  - The bug of the cursor position in scrolling in
	    ml_edit_overwrite_chars() is fixed.
	  - scroll_{up|down}ward_region() doesn't scroll if the cursor
	    is outside of the scrolling region.

2013-06-11  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* ml_char.[ch], ml_color.c: 16 and 231 aren't treated as ML_FG_COLOR
	  and ML_BG_COLOR internally but as 256 colors.

2013-06-11  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_font.c: "fixed" fonts are preferred to other fonts if
	  nothing is specified in ~/.mlterm/font.

2013-06-10  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c: Bug fixes of insert_chars().

	* ml_cursor.[ch]: ml_cursor_reset_col_in_char() is removed.

2013-06-10  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.[ch], ml_screen.h, ml_vt100_parser.c:
	  DECLRMM(CSI ? 69 h / CSI ? 69 l) and DECSLRM(CSI pl;pr s) are
	  supported.

	* ml_vt100_parser.[ch], ml_term.c: use_bidi flag is added to
	  ml_vt100_parser_t in order to determine whether
	  ml_is_arabic_combining() should be called.

2013-06-09  Araki Ken  <arakiken@users.sf.net>

	* ml_char.c: The bug of ml_char_code_equal() is fixed.

2013-06-08  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: x_window_set_selection_owner() is called after the
	  selected region is decided in order not to let parcellite reset
	  the selected region.

2013-06-07  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja, doc/ja/README.fb: Updated.

	* fb/x_window.c: draw_string() supports surrogate pair.

	* x_shortcut.c: The bug which disabled Control+Button1 and Control+Button3
	  is fixed.

	* mkf_char.[ch]: mkf_char_to_int() is changed from function to macro.

	* MLTermPty.c, MLTerm.java, Style.java: Italic font style is supported.

	* ml_char.[ch], ml_font.h, ml_line.c, ml_screen.[ch], ml_str.c,
	  ml_str_parser.c, ml_vt100_parser.[ch], fb/x_font.c, x_font_ft.c,